--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,144 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.css";
+@import "~ngx-toastr/toastr";
+@import url(https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,900);
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+h1 {
+  font-family: "Cinzel Decorative", cursive;
+  font-size: 3em;
+  font-weight: 600;
+}
+input {
+  border: none;
+  outline: none;
+  border-bottom: 4px solid #8842d5;
+}
+
+input :focus-visible {
+  background-color: #8942d531;
+}
+.float-btn {
+  float: right;
+  cursor: pointer;
+  padding: 5px;
+  /*position: relative;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  /*transform: translate(12em, -2.5em);*/
+}
+.form-border {
+  border: 1px solid #8842d5;
+  border-radius: 15px;
+  padding: 15px;
+  width: 75%;
+  margin: auto;
+}
+/* .form-border .row .col {
+  margin: 10px auto;
+} */
+.form-box {
+  text-align: end;
+  margin: 16px 0;
+  font-weight: 700;
+}
+input[type="search"] {
+  width: 10em;
+}
+a,
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+:host {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 8px 0;
+}
+
+p {
+  margin: 0;
+}
+.pointer {
+  cursor: pointer;
+}
+td i {
+  cursor: pointer;
+}
+.bg-nav-color {
+  background-color: rebeccapurple;
+}
+.bg-nav-color a {
+  color: #ffffff !important;
+}
+.address-box {
+  border-radius: 4px;
+  border: 1px solid #eee;
+  background-color: #dcdcdc;
+  height: auto;
+  width: 200px;
+  margin: 5px;
+  padding: 10px;
+  display: inherit;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.address-box p {
+  display: block;
+}
+.address-box p span {
+  font-weight: bold;
+}
+.edit-button {
+  display: block;
+}
+
+.edit-button button {
+  align-items: flex-end;
+}
+.cards-options {
+  text-align: right;
+  position: absolute;
+  top: 0px;
+  left: 75%;
+}
+.cards-options a {
+  display: inline-block;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.card-small h6 {
+  font-size: 18px;
+}
+.card-small h6 span {
+  font-size: 16px;
+  font-weight: lighter;
+}
