--- a/src/app/employee/form-employee/form-employee.component.html
+++ b/src/app/employee/form-employee/form-employee.component.html
@@ -1,6 +1,6 @@
-<div class="container m-auto">
+<div class="container m-auto pb-3">
   <div class="text-center">
-    <h1 class="text-primary fancy">employee Form</h1>
+    <h1 class="text-primary fancy title-head">employee Form</h1>
   </div>
   <form
     #employeeForm="ngForm"
